adding screens and finishing the first screen for the learn tab

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -18,5 +18,21 @@
     "have_account" : "لديك حساب بالفعل؟",
     "to_sign_up" : "إنشاء حساب جديد",
     "to_sign_in" : "تسجيل الدخول",
-    "description": "التطبيق التعليمي الأول لدراسة العلـــوم الشرعيـــة باستخـــدام الذكـــاء الاصطناعــي"
+    "description": "التطبيق التعليمي الأول لدراسة العلـــوم الشرعيـــة باستخـــدام الذكـــاء الاصطناعــي",
+    "home_button" : "الرئيسية",
+    "profile_button" : "حسابي",
+    "support_button" : "الدعم",
+    "learn_button" : "تعلّم",
+    "library_button" : "المكتبة",
+    "tafsir_name" : "التفسير",
+    "fiqh_name" : "الفقه",
+    "aqidah_name" : "العقيدة",
+    "hadith_name" : "الحديث",
+    "tafsir_book" : "تيسير الكريم الرحمن في تفسير كلام المنان",
+    "fiqh_book" : "الفقه الميسر في ضوء الكتاب والسنة",
+    "aqidah_book" : "أصول الإيمان في ضوء الكتاب والسنة",
+    "hadith_book" : "الأربعون النووية",
+    "tafsir_sheikh" : "بشرح الشيخ عبد الرزاق البدر",
+    "aqidah_sheikh" : "بشرح الشيخ محمد إسماعيل المقدم",
+    "hadith_sheikh" : "بشرح الشيخ صالح آل الشيخ"
 }
