integrating youtube videos & adding fixed ui in its screen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -34,5 +34,10 @@
     "hadith_book" : "الأربعون النووية",
     "tafsir_sheikh" : "بشرح الشيخ عبد الرزاق البدر",
     "aqidah_sheikh" : "بشرح الشيخ محمد إسماعيل المقدم",
-    "hadith_sheikh" : "بشرح الشيخ صالح آل الشيخ"
+    "hadith_sheikh" : "بشرح الشيخ صالح آل الشيخ",
+    "lecture_title" : "التفسير | المحاضرة الأولى",
+    "lecture_tab1":"عن المقرر",
+    "lecture_tab2":"المحتوى",
+    "lecture_tab3":"نتائج الاختبارات",
+    "lecture_tab4":"الأسئلة"
 }
