--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -34,5 +34,10 @@
     "hadith_book" : "Al-Arba'oon Al-Nawaweya",
     "tafsir_sheikh" : "AbdelRazzaq Al-Badr",
     "aqidah_sheikh" : "Muhammad Ismail Al-Muqaddem",
-    "hadith_sheikh" : "Saleh Aal Al-Sheikh"
+    "hadith_sheikh" : "Saleh Aal Al-Sheikh",
+    "lecture_title" : "Interpretation | Lecture 1",
+    "lecture_tab1": "About",
+    "lecture_tab2": "Content",
+    "lecture_tab3": "Tests Results",
+    "lecture_tab4": "Questions"
 }
