primary navigation, login & sign up validations and svg migration

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -6,10 +6,14 @@
     "password_subtitle" : "كلمة المرور",
     "confirm_password_subtitle" : "تأكيد كلمة المرور",
     "mobile_number_subtitle" : "رقم الجوال",
+    "first_name_subtitle" : "الاسم الأول",
+    "last_name_subtitle" : "الاسم الأخير",
     "email_hint" : "أدخل بريدك الإلكتروني",
     "password_hint" : "أدخل كلمة المرور",
     "confirm_password_hint" : "أدخل كلمة المرور مرة أخرى",
     "mobile_number_hint" : "أدخل رقم جوالك",
+    "first_name_hint" : "أدخل اسمك الأول",
+    "last_name_hint" : "أدخل اسمك الأخير",
     "forgot_password" : "نسيت كلمة المرور؟",
     "login_button" : "تسجيل الدخول",
     "register_button" : "إنشاء حساب جديد",
@@ -42,8 +46,20 @@
     "lecture_tab4":"الأسئلة",
     "to_essay_exam": "التالي",
     "submit_exam": "سجل",
-    "alert_dialog_title": "تسليم جميع الإجابات؟",
-    "alert_dialog_content": "هل أنت متأكد أنك تريد تسليم جميع الإجابات الاختيارية والمقالية؟",
+    "submit_alert_dialog_title": "تسليم جميع الإجابات؟",
+    "exit_alert_dialog_title": "الخروج من التطبيق؟",
+    "submit_alert_dialog_content": "هل أنت متأكد أنك تريد تسليم جميع الإجابات الاختيارية والمقالية؟",
+    "exit_alert_dialog_content": "هل أنت متأكد أنك تريد الخروج من التطبيق؟",
     "alert_dialog_yes": "نعم، متأكد",
-    "alert_dialog_no": "لا، لست متأكدًا"
+    "alert_dialog_no": "لا، لست متأكدًا",
+    "email_error": "البريد الإلكتروني يجب أن يكون مثل:\n'user@example.com'",
+    "email_empty": "من فضلك أدخل بريدك الإلكتروني",
+    "name_error": "الاسم يجب أن يحتوي على حروف فقط بدون أي مسافات أو رموز",
+    "name_empty": "من فضلك أدخل اسمك",
+    "password_error": "كلمة المرور يجب أن تتكون من 8 أحرف على الأقل\nويجب أن تحتوي على:\nحرف كبير وحرف صغير ورقم ورمز",
+    "password_empty": "من فضلك أدخل كلمة المرور الخاصة بك",
+    "confirm_password_error": "كلمات المرور غير متطابقة",
+    "confirm_password_empty": "من فضلك أدخل كلمة المرور مرة أخرى",
+    "mobile_number_error": "رقم الجوال يجب أن يحتوي على رمز البلد + 10 أرقام",
+    "mobile_number_empty": "من فضلك أدخل رقم جوالك"
 }
