--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,10 +6,14 @@
     "password_subtitle" : "Password",
     "confirm_password_subtitle" : "Confirm your password",
     "mobile_number_subtitle" : "Mobile number",
+    "first_name_subtitle" : "First name",
+    "last_name_subtitle" : "Last name",
     "email_hint" : "Enter your email",
     "password_hint" : "Enter your password",
     "confirm_password_hint" : "ُEnter your password again",
     "mobile_number_hint" : "Enter your mobile number",
+    "first_name_hint" : "Enter your first name",
+    "last_name_hint" : "Enter your last name",
     "forgot_password" : "Forgot password?",
     "login_button" : "Login",
     "register_button" : "Register",
@@ -42,8 +46,20 @@
     "lecture_tab4": "Questions",
     "to_essay_exam": "Next",
     "submit_exam": "Submit",
-    "alert_dialog_title": "Submit All Answers?",
-    "alert_dialog_content": "Are you sure you want to submit all Multiple Choice & Essay responses?",
+    "submit_alert_dialog_title": "Submit All Answers?",
+    "exit_alert_dialog_title": "Exit Al-Menbar?",
+    "submit_alert_dialog_content": "Are you sure you want to submit all Multiple Choice & Essay responses?",
+    "exit_alert_dialog_content": "Are you sure you want to exit the app?",
     "alert_dialog_yes": "Yes, I am sure",
-    "alert_dialog_no": "No, I am not"
+    "alert_dialog_no": "No, I am not",
+    "email_error": "Email address should be as follows:\n'user@example.com'",
+    "email_empty": "Please enter your email address!!",
+    "name_error": "Name should contain only letters without spaces or special characters.",
+    "name_empty": "Please enter your name!!",
+    "password_error": "Password must be at least 8 characters & must contain at least:\none lowercase letter, one uppercase letter,\none number, and one special character.",
+    "password_empty": "Please enter your password!!",
+    "confirm_password_error": "Passwords do not match!!",
+    "confirm_password_empty": "Please confirm your password!!",
+    "mobile_number_error": "Mobile number should consist of your country code + 10 digits.",
+    "mobile_number_empty": "Please enter your mobile number!!"
 }
