--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2,7 +2,7 @@
     "title" : "Al-Menbar",
     "login_page" : "Login",
     "register_page" : "Register",
-    "email_subtitle" : "eEmail",
+    "email_subtitle" : "Email",
     "password_subtitle" : "Password",
     "confirm_password_subtitle" : "Confirm your password",
     "mobile_number_subtitle" : "Mobile number",
@@ -15,8 +15,6 @@
     "first_name_hint" : "Enter your first name",
     "last_name_hint" : "Enter your last name",
     "forgot_password" : "Forgot password?",
-    "login_button" : "Login",
-    "register_button" : "Register",
     "or": "or login with",
     "no_account": "Don't have an account? ",
     "have_account": "Already have an account? ",
@@ -39,7 +37,6 @@
     "tafsir_sheikh" : "AbdelRazzaq Al-Badr",
     "aqidah_sheikh" : "Muhammad Ismail Al-Muqaddem",
     "hadith_sheikh" : "Saleh Aal Al-Sheikh",
-    "lecture_title" : "Interpretation | Lecture 1",
     "lecture_tab1": "About",
     "lecture_tab2": "Content",
     "lecture_tab3": "Tests Results",
@@ -61,5 +58,8 @@
     "confirm_password_error": "Passwords do not match!!",
     "confirm_password_empty": "Please confirm your password!!",
     "mobile_number_error": "Mobile number should consist of your country code + 10 digits.",
-    "mobile_number_empty": "Please enter your mobile number!!"
+    "mobile_number_empty": "Please enter your mobile number!!",
+    "final_exam": "Enter the final exam",
+    "profile_header": "Account Information",
+    "logout_button": "Logout"
 }
